# FINETUNINGLLMS-SFT

./: ._PEFT  ._requirements.txt  .gitignore  ChatTemplate.ipynb  README.md  main.py  pyproject.toml  requirements.txt
Distillation/: SMOLLM_TeacherStudentDistillation.ipynb
PEFT/: MedicalImageTexttoText.ipynb  NTBK_Evaluation.ipynb  NTBK_FineTuning.ipynb  llamaAdapters.ipynb
PreTraining/: Lesson_1.html  Lesson_1.ipynb  NTBK_Data_Preparation.ipynb  NTBK_Evaluation.ipynb  NTBK_ModelInitialization.ipynb  NTBK_PackagingDataForPretraining.ipynb  NTBK_Training.ipynb
PreTraining/data/: packed_dataset.parquet  preprocessed_dataset.parquet
PreTraining/scripts_data/: and_gate.py  imply_gate.py  karnaugh_map_simplification.py  multiplexer.py  nand_gate.py  nor_gate.py  not_gate.py  or_gate.py  quine_mc_cluskey.py  xnor_gate.py
SyntheticDataPipeline/: DataPipeline.ipynb
