[project]
name = "finetuningllms-sft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.22.0",
    "bitsandbytes==0.41.1",
    "datasets>=2.20.0",
    "deeplake==3.9.27",
    "deepspeed==0.10.1",
    "fasttext>=0.9.3",
    "neural-compressor===2.2.1",
    "numpy==1.23.5",
    "onnx===1.14.1",
    "openai==1.37.1",
    "pandas==2.0.3",
    "peft==0.5.0",
    "scipy==1.11.2",
    "tiktoken==0.4.0",
    "torch==2.0.1",
    "tqdm>=4.66.4",
    "transformers==4.32.0",
    "trl==0.7.1",
    "wandb==0.15.8",
]
